[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "release_creation"
version = "0.1.1"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "dbt Labs", email = "info@dbtlabs.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["release_creation"]
